--- a/css/rmsk.css
+++ b/css/rmsk.css
@@ -12,6 +12,7 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
     display: inline;
     pointer-events: auto;
     cursor: pointer;
+    border-bottom: 1px solid #f5f5f5;
   }
 
 .hover-image {
