--- a/css/rmsk.css
+++ b/css/rmsk.css
@@ -261,7 +261,22 @@ body:not(.mobile) .hover-title:hover + .hover-image {
    }
    
    @media screen and (max-width: 767px) {
-     .link-2 {
+    .hover-image {
+      display: flex;
+      position: fixed;
+      top: 80%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: -1;
+      pointer-events: none;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 80vw;
+      height: 80vh;
+     } 
+
+    .link-2 {
        font-size: 22px;
      }
      .div-block-2019 {
@@ -304,7 +319,7 @@ body:not(.mobile) .hover-title:hover + .hover-image {
    }
    
    @media screen and (max-width: 479px) {
-     .link-2 {
+      .link-2 {
        font-size: 20px;
      }
      .utility-page-wrap {
